codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1779
expression: normalize_snapshot_paths(contents)
---

 Elpis · model gpt-5.6-sol default · location /tmp/project

  Would you like to make the following edits?

  Description: The model wants to apply changes
  Destination: /tmp/project/README.md


› 1. Yes, proceed (y)                                                           
  2. Yes, and don't ask again for these files (a)
  3. No, and tell Elpis what to do differently (esc)

  Press enter to confirm or esc to cancel
