codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 233
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Update Model Permissions


› 1. Ask for approval  Read and edit workspace files and run commands, with
                       approval required for internet access or edits outside
                       the workspace
  2. Full Access       Use with caution: Elpis can edit files outside this
                       workspace and access the internet without approval

  enter select · esc back
