codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup@windows.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Update Model Permissions


› 1. Read Only (current)  Read workspace files, with approval required for edits
                          or internet access
  2. Ask for approval     Read and edit workspace files and run commands, with
                          approval required for internet access or edits outside
                          the workspace
  3. Full Access          Use with caution: Elpis can edit files outside this
                          workspace and access the internet without approval

  enter select · esc back
